force-app/main/default/objects/Thesis__c/Thesis__c.object-meta.xml
<CustomObject>
    <label>Thesis</label>
    <nameField>
        <label>Thesis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Theses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>