force-app/main/default/objects/Thesis__c/fields/Invention_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Invention_Disclosure__c</fullName>
    <label>Invention Disclosure</label>
    <referenceTo>Invention_Disclosure__c</referenceTo>
    <relationshipLabel>Theses</relationshipLabel>
    <relationshipName>Theses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>