force-app/main/default/objects/Thesis__c/fields/Name_of_Student__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Student__c</fullName>
    <inlineHelpText>Enter the name of the inventor presenting a thesis</inlineHelpText>
    <label>Name of Student</label>
    <length>200</length>
    <type>Text</type>
</CustomField>