force-app/main/default/objects/Thesis__c/fields/Thesis_Comment__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Comment__c</fullName>
    <label>Thesis Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>