force-app/main/default/objects/Thesis__c/fields/Thesis_Defense_Date__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Defense_Date__c</fullName>
    <label>Thesis Defense Date</label>
    <type>Date</type>
</CustomField>