force-app/main/default/objects/Thesis__c/fields/Thesis_Degree_Date__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Degree_Date__c</fullName>
    <label>Thesis Degree Date</label>
    <type>Date</type>
</CustomField>