force-app/main/default/objects/Thesis__c/fields/Thesis_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Submitted_Date__c</fullName>
    <label>Thesis Submitted Date</label>
    <type>Date</type>
</CustomField>