force-app/main/default/objects/Thesis__c/fields/Thesis_Type__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Type__c</fullName>
    <label>Thesis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>